<resources>
    <string name="app_name">DrBuddy</string>
    <string name="user_name">chari@drchat.com</string>
    <string name="nav_inbox">Home page</string>
    <string name="nav_drafts">Add a patient</string>
    <string name="nav_sent">Transations</string>
    <string name="nav_trash">Contacts</string>
    <string name="nav_support">More</string>
    <string name="nav_help">Dashboard</string>
    <string name="nav_feedback">Give us feedback</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Patient details are successfully added!</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name or Number...</string>
</resources>
