<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        >
    <item
        android:id="@+id/nav_inbox"
        android:icon="@drawable/ic_home_black_64dp"
        android:title="@string/nav_inbox"
        android:checked="true"
        />
    <item
        android:id="@+id/nav_drafts"
        android:icon="@drawable/ic_group_add_black_24dp"
        android:title="@string/nav_drafts"
        />
    <item
        android:id="@+id/nav_sent"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/nav_sent"
        />
    <item
        android:id="@+id/nav_trash"
        android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
        android:title="@string/nav_trash"
        />
    </group>

    <item
        android:title="@string/nav_support"
        >
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_dashboard_black_24dp"
                android:title="@string/nav_help"
                />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_feedback"
                />
        </menu>
    </item>

</menu>